<resources>
    <string name="app_name">NzTravelMate</string>
    <string name="headerTitle">NzTravelMate</string>
    <string name="splashdescription">"rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua rotorua "</string>
    <string name="splashEntryButton">Let us explore</string>
    <string name="splashVisitRotorua"><html><small>Visit</small> \n</html>ROTORUA</string>
    <string name="splashEPayment"><html>\n</html>ePayments</string>
    <string name="selectacity">Select a City</string>
    <string name="tab_description">Rotorua sits on the shores of Lake Rotorua of New Zealand. There are several other lakes nearby. Along with the geothermal wonders, there are also the more usual water activities such as fishing, boating and white water rafting. Tourism is a major industry in Rotorua, and for good reason, the tourism services are therefore well developed and visitors should definitely make a stop at the Tourist Information Centre on the main road, Fenton Street.</string>
    <string name="tabattractions">Luxury</string>
    <string name="tabshopping">Clothing</string>
    <string name="tabgourmet">Food</string>
    <string name="tabStay">Stays</string>
    <string name="tabAppear">Appear</string>
    <string name="tabProfile">Profile</string>
    <string name="tabMap">Map</string>
    <string name="tabIntro">Introduction</string>
    <string name="tabDiscount">Discount</string>
    <string name="title_activity_maps">Map</string>
    <string name="Visit">Visit</string>

    <string name="Payment">Alternate Payment</string>
    <string name="Mandarin_Speaking_Staff">Mandarin Speaking Staff</string>
    <string name="Free_Wifi">Free Wifi</string>
    <string name="Free_Parking">Free Parking</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="NoService">No Service Available</string>

    <string name="Spend">Suggested Spend</string>
    <string name="SuggestedTime">Suggested Time</string>
    <string name="OperatedTime">Operating Timing</string>
    <string name="Website">Website</string>
    <string name="permissionmessage">"You need to grant Telephone permission from app permission setting for make a call,\n Do you want continue to grant the permission?</string>
    <string name="OK">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="InterNetMessage">Network Error, Check your internet connection</string>
    <string name="InternetTitle">Network Error</string>

</resources>
