<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/bg_gray_white_list"
    android:id="@+id/relativeLayout"
    android:elevation="@dimen/dimension5dp"
    android:layout_marginTop="@dimen/dimension10dp"
    android:layout_marginBottom="@dimen/dimension10dp"
    >
    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimension10dp"
        android:background="#00000000"
        >

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="@dimen/dimension70dp"
            android:layout_height="@dimen/dimension70dp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/dimension10dp"
            android:layout_marginLeft="@dimen/dimension10dp"
            android:layout_marginTop="@dimen/dimension10dp"
            android:layout_marginEnd="@dimen/dimension10dp"
            android:layout_marginRight="@dimen/dimension10dp"
            android:background="#00000000"
            android:src="@drawable/website">
            ></ImageView>
        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="First NAme"
            android:textStyle="bold"
            android:textSize="@dimen/dimension18dp"
            android:layout_toRightOf="@+id/imgProfile"
            ></TextView>

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSkyBlue"
            android:text="Address"
            android:textSize="@dimen/dimension18dp"
            android:layout_toRightOf="@+id/imgProfile"
            android:layout_below="@+id/txtName"
            android:layout_centerVertical="true"
            ></TextView>
        <TextView
            android:id="@+id/txtShort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlackGray"
            android:text=""
            android:textSize="@dimen/dimension17dp"
            android:layout_toRightOf="@+id/imgProfile"
            android:layout_below="@+id/txtAddress"
            ></TextView>

        <ImageView
            android:id="@+id/imgRight"
            android:layout_width="@dimen/dimension30dp"
            android:layout_height="@dimen/dimension30dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/user_check"
            android:visibility="gone"
            >
            ></ImageView>
    </RelativeLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension3dp"
        android:background="@color/colorGray"
        android:layout_below="@+id/rlTop"
        ></View>
    <RelativeLayout
        android:id="@+id/rlBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_margin="@dimen/dimension10dp"
        >
        <TextView
            android:id="@+id/txtSpend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/Spend"
            android:drawableLeft="@drawable/resize_price_icon"
            android:drawablePadding="@dimen/dimension5dp"
            android:textSize="@dimen/dimension16dp"
            android:layout_marginLeft="@dimen/dimension3dp"
            android:layout_marginRight="@dimen/dimension3dp"
            android:gravity="center_vertical"
            ></TextView>
    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/SuggestedTime"
        android:drawableLeft="@drawable/resize_icon"
        android:drawablePadding="@dimen/dimension5dp"
        android:textSize="@dimen/dimension16dp"
        android:layout_marginLeft="@dimen/dimension3dp"
        android:layout_marginRight="@dimen/dimension3dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/txtSpend"
        ></TextView>
    <TextView
        android:id="@+id/txtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/OperatedTime"
        android:drawableLeft="@drawable/resize_time_icon"
        android:drawablePadding="@dimen/dimension5dp"
        android:textSize="@dimen/dimension16dp"
        android:layout_below="@+id/txtDistance"
        android:layout_marginLeft="@dimen/dimension3dp"
        android:layout_marginRight="@dimen/dimension3dp"
        android:layout_marginTop="@dimen/dimension1dp"
        android:gravity="center_vertical"
        ></TextView>
    <TextView
        android:id="@+id/txtPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/Payment"
        android:drawableLeft="@drawable/resize_pay_icon"
        android:drawablePadding="@dimen/dimension5dp"
        android:textSize="@dimen/dimension16dp"
        android:layout_below="@+id/txtTime"
        android:layout_marginLeft="@dimen/dimension3dp"
        android:layout_marginRight="@dimen/dimension3dp"
        android:layout_marginTop="@dimen/dimension1dp"
        android:gravity="center_vertical"
        ></TextView>
        <TextView
            android:id="@+id/txtWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/Free_Wifi"
            android:drawableLeft="@drawable/resize_wifi_icon"
            android:drawablePadding="@dimen/dimension5dp"
            android:textSize="@dimen/dimension16dp"
            android:layout_below="@+id/txtPayment"
            android:layout_marginLeft="@dimen/dimension3dp"
            android:layout_marginRight="@dimen/dimension3dp"
            android:layout_marginTop="@dimen/dimension1dp"
            android:gravity="center_vertical"
            ></TextView>
        <TextView
            android:id="@+id/txtParking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/Free_Parking"
            android:drawableLeft="@drawable/resize_parking_icon"
            android:drawablePadding="@dimen/dimension5dp"
            android:textSize="@dimen/dimension16dp"
            android:layout_below="@+id/txtWifi"
            android:layout_marginLeft="@dimen/dimension3dp"
            android:layout_marginRight="@dimen/dimension3dp"
            android:layout_marginTop="@dimen/dimension1dp"
            android:gravity="center_vertical"
            ></TextView>
        <TextView
            android:id="@+id/txtStaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/Mandarin_Speaking_Staff"
            android:drawableLeft="@drawable/resize_staff_icon"
            android:drawablePadding="@dimen/dimension5dp"
            android:textSize="@dimen/dimension16dp"
            android:layout_below="@+id/txtParking"
            android:layout_marginLeft="@dimen/dimension3dp"
            android:layout_marginRight="@dimen/dimension3dp"
            android:layout_marginTop="@dimen/dimension1dp"
            android:gravity="center_vertical"
            ></TextView>
        <TextView
            android:id="@+id/txtWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/Website"
            android:drawableLeft="@drawable/resize_www_icon"
            android:drawablePadding="@dimen/dimension5dp"
            android:textSize="@dimen/dimension16dp"
            android:layout_below="@+id/txtStaff"
            android:layout_marginLeft="@dimen/dimension3dp"
            android:layout_marginRight="@dimen/dimension3dp"
            android:layout_marginTop="@dimen/dimension1dp"
            android:gravity="center_vertical"
            ></TextView>

    </RelativeLayout>
</RelativeLayout>
