<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startup.SplashActivity">
    <ImageView
        android:id="@+id/animated_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_gravity="center_vertical"
        />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/txtMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimension20dp"
            android:padding="@dimen/dimension10dp"
            android:text="@string/headerTitle"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimension22dp"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dimension10dp"
            android:background="@drawable/bg_gray_white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimension15dp"
            android:paddingRight="@dimen/dimension15dp"
            android:visibility="gone"
            >

            <ImageView
                android:layout_width="@dimen/dimension30dp"
                android:layout_height="@dimen/dimension30dp"
                android:layout_margin="@dimen/dimension5dp"
                android:paddingLeft="@dimen/dimension2dp"
                android:scaleType="center"
                android:src="@drawable/back"></ImageView>

            <View
                android:layout_width="@dimen/dimension1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimension10dp"
                android:layout_marginTop="@dimen/dimension5dp"
                android:layout_marginRight="@dimen/dimension10dp"
                android:layout_marginBottom="@dimen/dimension5dp"
                android:background="@color/colorGray"
                android:visibility="gone"></View>

            <ImageView
                android:layout_width="@dimen/dimension30dp"
                android:layout_height="@dimen/dimension30dp"
                android:layout_margin="@dimen/dimension5dp"
                android:paddingRight="@dimen/dimension2dp"
                android:scaleType="center"
                android:src="@drawable/location"></ImageView>
        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimension60dp"
        android:layout_marginTop="@dimen/dimension60dp"
        android:text="@string/headerTitle"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimension35dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCity"
        android:layout_marginLeft="@dimen/dimension50dp"
        android:layout_marginTop="@dimen/dimension60dp"
        android:layout_marginRight="@dimen/dimension50dp"
        android:text="@string/splashdescription"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimension20dp"></TextView>

    <View
        android:id="@+id/viewCenter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="@color/colorWhite"
        android:visibility="gone"></View>

    <TextView
        android:id="@+id/txtEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="@dimen/dimension50dp"
        android:background="@drawable/bg_white_white"
        android:paddingLeft="@dimen/dimension50dp"
        android:paddingTop="@dimen/dimension10dp"
        android:paddingRight="@dimen/dimension50dp"
        android:paddingBottom="@dimen/dimension10dp"
        android:text="@string/splashEntryButton"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dimension20dp" />

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimension50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="@string/splashVisitRotorua"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/txtPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/btn_star_big_off"
            android:paddingLeft="@dimen/dimension10dp"
            android:text="@string/splashEPayment"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimension20dp"
            android:visibility="gone"
            />
    </LinearLayout>
</RelativeLayout>
    </FrameLayout>
<!-- <TextView
        android:id="@+id/txtBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimension18dp"
        android:text="@string/splashEntryButton"
        android:textColor="@color/colorBlack"
        android:paddingTop="@dimen/dimension10dp"
        android:paddingBottom="@dimen/dimension10dp"
        android:paddingLeft="@dimen/dimension20dp"
        android:paddingRight="@dimen/dimension20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_white_white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimension50dp"
        />
-->
