<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        >
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimension10dp"
            android:layout_centerVertical="true"
            android:text="@string/headerTitle"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimension22dp"
            android:layout_marginLeft="@dimen/dimension20dp"
            ></TextView>
        <TextView
        android:id="@+id/txtMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
            android:layout_marginRight="@dimen/dimension10dp"
            android:layout_alignParentRight="true"
        android:text="@string/tabMap"
        android:drawableTop="@drawable/drawable_map"
        android:textSize="@dimen/dimension17dp"
        android:textColor="@color/colorBlack"
        android:padding="@dimen/dimension5dp"
        android:gravity="center"
        ></TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_gray_white"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dimension10dp"
            android:paddingLeft="@dimen/dimension15dp"
            android:paddingRight="@dimen/dimension15dp"
            android:visibility="gone"
            >
            <ImageView
                android:layout_width="@dimen/dimension30dp"
                android:layout_height="@dimen/dimension30dp"
                android:src="@drawable/back"
                android:layout_margin="@dimen/dimension5dp"
                android:scaleType="center"
                android:paddingLeft="@dimen/dimension2dp"
                ></ImageView>
            <View
                android:layout_width="@dimen/dimension1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGray"
                android:layout_marginTop="@dimen/dimension5dp"
                android:layout_marginBottom="@dimen/dimension5dp"
                android:layout_marginRight="@dimen/dimension10dp"
                android:layout_marginLeft="@dimen/dimension10dp"

                ></View>
            <ImageView
                android:layout_width="@dimen/dimension30dp"
                android:layout_height="@dimen/dimension30dp"
                android:src="@drawable/location"
                android:layout_margin="@dimen/dimension5dp"
                android:scaleType="center"
                android:paddingRight="@dimen/dimension2dp"
                ></ImageView>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        ></RelativeLayout>
    <View
        android:id="@+id/viewfooter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension2dp"
        android:background="@color/colorGray"
        android:layout_above="@+id/llFooter"
        android:visibility="gone"
        ></View>
    <LinearLayout
        android:id="@+id/llFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/txtFacility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tabAppear"
            android:drawableTop="@drawable/city_check"
            android:textSize="@dimen/dimension20dp"
            android:textColor="@color/colorSkyBlue"
            android:padding="@dimen/dimension5dp"
            android:gravity="center"
            ></TextView>
        <TextView
            android:id="@+id/txtMapr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tabMap"
            android:drawableTop="@drawable/map_uncheck"
            android:textSize="@dimen/dimension20dp"

            android:textColor="@color/colorBlack"
            android:padding="@dimen/dimension5dp"
            android:gravity="center"
            ></TextView>
        <TextView
            android:id="@+id/txtProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tabProfile"
            android:drawableTop="@drawable/user_uncheck"
            android:textSize="@dimen/dimension20dp"
            android:textColor="@color/colorBlack"
            android:padding="@dimen/dimension5dp"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
  <!--  <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@color/colorWhite"
        app:tabSelectedTextColor="@color/colorSkyBlue"
        app:tabTextColor="@color/colorBlack"
        android:elevation="6dp"
        android:layout_alignParentBottom="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/tab_layout"
        android:layout_below="@+id/header"
        />-->
</RelativeLayout>